--- a/.github/workflows/deploy-to-ec2.yml
+++ b/.github/workflows/deploy-to-ec2.yml
@@ -13,9 +13,7 @@ steps:
   - name: Checkout the files
     uses: actions/checkout@v2
 
-
-name: Push-to-EC2
-
+name: Deploy to EC2
 # Trigger deployment only on push to master branch
 on:
   push:
