--- a/.github/workflows/deploy-to-ec2.yml
+++ b/.github/workflows/deploy-to-ec2.yml
@@ -37,5 +37,5 @@ jobs:
             git pull
             composer install
       - name: Copy to web server
-        run: sudo cp -r * /var/www/html/demo_ci-cd/
+        run: sudo cp -r * demo_ci-cd_old
        
